# SimpleDataServer

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  download_deps.sh
src/: main.cpp
src/handlers/: api_handler.cpp  api_handler.hpp
src/server/: data_server.cpp  data_server.hpp
src/storage/: file_manager.cpp  file_manager.hpp
